--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
-    "next": "^16.0.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.8",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.3.1"
   },
